/**
 * LVMd manages logical volumes of an LVM volume group.
 *
 * The protocol consists of two services:
 * - VGService provides information of the volume group.
 * - LVService provides management functions for logical volumes on the volume group.
 */
syntax = "proto3";
package proto;

message Empty {}

// Represents a logical volume.
message LogicalVolume {
    string name = 1;          // The logical volume name.
    uint64 size_gb = 2;       // Volume size in GiB.
    uint32 dev_major = 3;     // Device major number.
    uint32 dev_minor = 4;     // Device minor number.
    repeated string tags = 5; // Tags to add to the volume during creation
    string vg_name = 6;
}

// Represents the input for CreateLV.
message CreateLVRequest {
    string name = 1;              // The logical volume name.
    uint64 size_gb = 2;           // Volume size in GiB.
    repeated string tags = 3;     // Tags to add to the volume during creation
    string vg_name = 4;
}

// Represents the response of CreateLV.
message CreateLVResponse {
    LogicalVolume volume = 1;  // Information of the created volume.
}

// Represents the input for RemoveLV.
message RemoveLVRequest {
    string name = 1;       // The logical volume name.
    string vg_name = 2;
}

// Represents the input for ResizeLV.
//
// The volume must already exist.
// The volume size will be set to exactly "size_gb".
message ResizeLVRequest {
    string name = 1;       // The logical volume name.
    uint64 size_gb = 2;    // Volume size in GiB.
    string vg_name = 3;
}

// Represents the response of GetLVList.
message GetLVListResponse {
    repeated LogicalVolume volumes = 1;  // Information of volumes.
}

// Represents the response of GetFreeBytes.
message GetFreeBytesResponse {
    uint64 free_bytes = 1;  // Free space of the volume group in bytes.
}

message GetLVListRequest {
    string vg_name = 1;
}

message GetFreeBytesRequest {
    string vg_name = 1;
}

// Represents the stream output from Watch.
message WatchResponse {
    repeated WatchItem items = 1;
}

message WatchItem {
    uint64 free_bytes = 1;  // Free space of the volume group in bytes.
    string vg_name = 2;
}

// Service to manage logical volumes of the volume group.
service LVService {
    // Create a logical volume.
    rpc CreateLV(CreateLVRequest) returns (CreateLVResponse);
    // Remove a logical volume.
    rpc RemoveLV(RemoveLVRequest) returns (Empty);
    // Resize a logical volume.
    rpc ResizeLV(ResizeLVRequest) returns (Empty);
}

// Service to retrieve information of the volume group.
service VGService {
    // Get the list of logical volumes in the volume group.
    rpc GetLVList(GetLVListRequest) returns (GetLVListResponse);
    // Get the free space of the volume group in bytes.
    rpc GetFreeBytes(GetFreeBytesRequest) returns (GetFreeBytesResponse);
    // Stream the volume group metrics.
    rpc Watch(Empty) returns (stream WatchResponse);
}
